# srt-subtitles-parser

./: Cargo.toml  Makefile  Readme.md  output.json  shifted.srt  test_file.srt
src/: grammar.pest  lib.rs  main.rs
tests/: grammar_tests.rs
