[package]
name = "srt_subtitles_parser"
authors = ["Anna Zinchenko"]
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A Rust-based parser that processes .srt (SubRip Subtitle) files and converts them into a structured data format"
repository = "https://github.com/annnzinch/srt-subtitles-parser"

[dependencies]
pest = "2.8.3"
pest_derive = "2.8.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"